fixed issue with cv overlapping header. Looks awful on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
 .App {
   text-align: center;
-  position: relative;
-  height: 100vh;
+  /* background-color: ; */
+
 
 }
 
-/* body {
-
-} */
 
 #title {
   font-family: "Carter One", cursive;
